<resources>
    <!-- Drawer strings-->
    <string name="app_name">Examen Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ing. Jesús González Memije</string>
    <string name="nav_header_subtitle">Desarrollador Android</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Sections general-->
    <string name="section_title">Título</string>
    <string name="section_subtitle">Subtítulo</string>
    <string name="todo">TODO</string>

    <!-- Menú drawer -->
    <string name="menu_movie">Top películas</string>
    <string name="menu_location">Ubicaciones</string>
    <string name="menu_photo">Subir fotos</string>
    <string name="menu_user">Usuarios</string>

    <!-- Movie Item -->
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>

    <!-- Alert Dialog -->
    <string name="ok">OK</string>
    <string name="alert_message">Alert message</string>

    <!-- Photos -->
    <string name="upload">SUBIR IMÁGENES</string>

    <!-- Form User -->
    <string name="full_name">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo</string>
    <string name="address">Dirección</string>
    <string name="image">Imagen</string>
    <string name="required">Requerido</string>
    <string name="submit">Guardar</string>
    <string name="add_user">Agregar usuario</string>
    <string name="user_name">Jesús González Memije</string>
    <string name="user_email_phone">memije.dev@gmail.com | 7551400924</string>
    <string name="user_address">Principal SN, 40980, Acapulco, Gro.</string>
    <string name="regresar">Regresar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>