<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movie">

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.memije.examenandroid.ui.movie.MovieFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.memije.examenandroid.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.memije.examenandroid.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.memije.examenandroid.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
</navigation>