<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_size_100dp"
    android:layout_marginStart="@dimen/custom_size_16dp"
    android:layout_marginTop="@dimen/custom_size_8dp"
    android:layout_marginEnd="@dimen/custom_size_16dp"
    android:layout_marginBottom="@dimen/custom_size_8dp"
    android:background="@color/bg_dark_grey">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/custom_size_14dp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        android:paddingStart="@dimen/custom_size_16dp"
        android:paddingEnd="@dimen/custom_size_16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_email_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/custom_size_8dp"
        android:text="@string/user_email_phone"
        android:textColor="@color/primaryTextColor"
        android:paddingStart="@dimen/custom_size_16dp"
        android:paddingEnd="@dimen/custom_size_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/custom_size_16dp"
        android:layout_marginEnd="@dimen/custom_size_16dp"
        android:layout_marginBottom="@dimen/custom_size_8dp"
        android:text="@string/user_address"
        android:textColor="@color/yellow"
        android:paddingStart="@dimen/custom_size_16dp"
        android:paddingEnd="@dimen/custom_size_16dp"
        app:layout_constraintTop_toBottomOf="@+id/user_email_phone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>